fix card style
